--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
 .jumbotron {
     background-image: url(./img/mesa_18.png);
+    background-repeat: no-repeat;
+    background-size: cover; /* que cubra*/
 }
