--- a/style.css
+++ b/style.css
@@ -1,5 +1,20 @@
+/* { outline: 1px dotted red; }*/
 .jumbotron {
     background-image: url(./img/mesa_18.png);
     background-repeat: no-repeat;
     background-size: cover; /* que cubra*/
+}
+.whatsapp__float {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 40px;
+    right: 40px;
+    background-color: #25d366;
+    color: #FFF;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 2px 2px 3px #999;
+    z-index: 100;
 }
